# euporie-binder

./: .bashrc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .profile  LICENSE  README.rst  introduction.ipynb  package-lock.json  package.json  pyproject.toml  setup.cfg  webpack.config.js
.config/euporie/: config.json
.elinks/: elinks.conf
.jupyter/: jupyter_notebook_config.json
.jupyter/lab/user-settings/@jupyterlab/terminal-extension/: plugin.jupyterlab-settings
binder/: Dockerfile  apt.txt  environment.yml  postBuild
euporie_binder/: __init__.py  __main__.py  app.py
euporie_binder/static/: bundle.js
jupyter-config/jupyter_notebook_config.d/: euporie_binder.json
jupyter-config/jupyter_server_config.d/: euporie_binder.json  jupyter_euporie.json
jupyter_euporie/: __init__.py  __main__.py  app.py
jupyter_euporie/static/: bundle.js  bundle.js.LICENSE.txt  bundle.js.map  xterm-addon-image-worker.js
jupyter_euporie/templates/: index.html
package/: index.css  index.ts  tsconfig.json
tests/: test_euporie_web.py
