[metadata]
name = euporie_binder
version = attr: euporie_binder.__version__
description = Run euporie online using binder
long_description = file: README.rst
long_description_content_type = text/rst
license_file = LICENSE
author = Josiah Outram Halstead
url = https://github.com/joouha/euporie-binder
platforms = Linux, Mac OS X, Windows
keywords = Binder, Jupyter, JupyterLab, Euporie
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab
    Framework :: Jupyter :: JupyterLab :: 3
    Framework :: Jupyter :: JupyterLab :: Extensions
    Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    jupyterlab-server>=2.8.2

[options.package_data]
euporie_binder = static/*, templates/*

[options.data_files]
etc/jupyter/jupyter_server_config.d = jupyter-config/jupyter_server_config.d/euporie_binder.json
etc/jupyter/jupyter_notebook_config.d = jupyter-config/jupyter_notebook_config.d/euporie_binder.json

[options.packages.find]
exclude =
    tests
